--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" defer src="./app.js"></script>
+    <script defer src="./app.js"></script>
     <title>Document</title>
 </head>
 
 <body>
+    <h1 id="heading">this is a heading</h1>
+    <div id="container">
+        <ul>
+
+        </ul>
+    </div>
 
 </body>
 
