--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
         
         div.second {
-            transition: 0.2s ease-in;
+            transition: 0.2s ease-out;
         }
         
         div.second::after {
@@ -40,6 +40,7 @@
     <div class="clock">
         <div class="second"></div>
     </div>
+    <ul></ul>
 </body>
 
 </html
