--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
 </head>
 
 <body>
-    <ul></ul>
+    <div>
+        <h1>Computer Score : <span id="comp"></span></h1>
+        <h1>My Score : <span id="me"></span></h1>
+    </div>
+
+    <div style="color:#ffbf00;font-size:large" id="message">
+        <h3>Rules</h3>
+        <ul>
+            <li>Rock beats Scissors</li>
+            <li>Paper beats Rock</li>
+            <li>Scissor beats Paper</li>
+        </ul>
+    </div>
+    <div class="buttons">
+        <button onclick="game(0)" class="rock">Rock</button>
+        <button onclick="game(1)" class="paper">Paper</button>
+        <button onclick="game(2)" class="scissors">Scissors</button>
+    </div>
 </body>
 
 </html
