--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
 <body>
     <div>
-        <h1>Computer Score : <span id="comp"></span></h1>
-        <h1>My Score : <span id="me"></span></h1>
+        <h3>Computer Score : <span id="comp"></span></h3>
+        <h3>My Score : <span id="me"></span></h3>
     </div>
 
-    <div style="color:#ffbf00;font-size:large" id="message">
+    <h2 style="color:#ffbf00;font-size:large" id="message">
         <h3>Rules</h3>
         <ul>
             <li>Rock beats Scissors</li>
             <li>Paper beats Rock</li>
             <li>Scissor beats Paper</li>
         </ul>
-    </div>
+    </h2>
     <div class="buttons">
         <button onclick="game(0)" class="rock">Rock</button>
         <button onclick="game(1)" class="paper">Paper</button>
