--- a/index.html
+++ b/index.html
@@ -11,24 +11,19 @@
 </head>
 
 <body>
-    <div>
-        <h3>Computer Score : <span id="comp"></span></h3>
-        <h3>My Score : <span id="me"></span></h3>
-    </div>
 
-    <h2 style="color:#ffbf00;font-size:large" id="message">
-        <h3>Rules</h3>
-        <ul>
-            <li>Rock beats Scissors</li>
-            <li>Paper beats Rock</li>
-            <li>Scissor beats Paper</li>
-        </ul>
-    </h2>
-    <div class="buttons">
-        <button onclick="game(0)" class="rock">Rock</button>
-        <button onclick="game(1)" class="paper">Paper</button>
-        <button onclick="game(2)" class="scissors">Scissors</button>
-    </div>
+    <nav></nav>
+
+    <section>
+        <header class="search">
+            <input type="text">
+            <button type="submit">Search</button>
+        </header>
+        <section class="recipies">
+
+        </section>
+    </section>
+
 </body>
 
 </html
